--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -9,8 +9,9 @@
     - name: Download latest VProfile.war from nexus
       get_url:
         # exemlpe of url : http://3.84.94.35:8081/repository/release/QA%2F2023-02-38_10-21-04%2FV6%2F2023-02-38_10-21-04-V6.war.md5
-        url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{time}}/{{build}}/{{vprofile_version}}"
+        #url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{time}}/{{build}}/{{vprofile_version}}"
         # download this url at this location
+        url : "http://44.202.91.133:8081/repository/release/QA%2F2023-02-40_01-39-27%2F7%2F2023-02-40_01-39-27-7.war"
         dest: "/tmp/vproapp-{{vprofile_version}}"
       register: wardeploy # to enregister the out put in this variable
       tags:
